[gd_scene load_steps=2 format=3 uid="uid://c8xqvt7m3ykjd"]

[ext_resource type="Script" path="res://src/ui/transcript/world_transcript_panel.gd" id="1_script"]

[node name="WorldTranscriptPanel" type="PanelContainer"]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "World Transcript"
theme_override_font_sizes/font_size = 16

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Not connected"
horizontal_alignment = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "âœ•"
tooltip_text = "Close panel"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EntriesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CopyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copy All"

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Export"

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"
